# opendbpy-mcp-server

./: .cfignore  .gitignore  DEV_README.md  README.md  example-config.toml  manifest.yml  pyproject.toml  requirements.txt
config/: opendb-dev.toml  opendb-uat.toml  opendb.toml  stop.sh
config/krb5/: krb5.uat.conf
examples/: example-config.toml  example-mysql-stdio.toml  example-opendb.uat.toml  mysql-local.toml  sqlite-test.toml
examples/pcf-deployment/config/: opendb.prod.toml
examples/pcf-deployment/config/krb5/: krb5.prod.conf  krb5.uat.conf
examples/scripts/: start-tmp.sh
src/opendb_mcp/: __init__.py  __main__.py  constants.py  server.py
src/opendb_mcp/config/: __init__.py  keytab.py  loader.py  types.py
src/opendb_mcp/connectors/: __init__.py  base.py  hive.py  impala.py  mysql.py  postgres.py  sqlite.py
src/opendb_mcp/services/: __init__.py  kerberos.py
src/opendb_mcp/tools/: __init__.py  execute_sql.py  list_sources.py  search_objects.py
src/opendb_mcp/utils/: __init__.py  errors.py  formatters.py  logger.py
tests/: __init__.py  test_config.py  test_connectors.py  test_formatters.py  test_kerberos.py  test_keytab.py  test_tools.py
