[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "opendb-mcp-server"
version = "1.0.0"
description = "Multi-database MCP server supporting PostgreSQL, MySQL, MariaDB, Hive, and Impala"
requires-python = ">=3.10"

dependencies = [
    "mcp>=1.2.0",
    "pydantic>=2.0",
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
http = ["starlette>=0.27", "uvicorn>=0.23"]
postgres = ["asyncpg>=0.29"]
mysql = ["aiomysql>=0.2"]
hive = [
    "pyhive[hive_pure_sasl]>=0.7",
    "thrift>=0.16",
    "pure-sasl>=0.6",
]
all = [
    "starlette>=0.27",
    "uvicorn>=0.23",
    "asyncpg>=0.29",
    "aiomysql>=0.2",
    "pyhive[hive_pure_sasl]>=0.7",
    "thrift>=0.16",
    "pure-sasl>=0.6",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[project.scripts]
opendb-mcp-server = "opendb_mcp.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/opendb_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
